Fix images in modals being too small

--- a/src/components/ImageModal/style.scss
+++ b/src/components/ImageModal/style.scss
@@ -7,7 +7,7 @@
 .image {
 	width: auto;
 	height: auto;
-	max-width: 90vh;
+	max-width: 90vw;
 	max-height: 90vh;
 	border-radius: 0.25em;
 }
